--- a/tests/DeviceManagementSystem.Tests/DeviceManagementSystem.Tests.csproj
+++ b/tests/DeviceManagementSystem.Tests/DeviceManagementSystem.Tests.csproj
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\scr\DeviceManagementSystem.Database\DeviceManagementSystem.Database.csproj" />
-    <ProjectReference Include="..\..\scr\DeviceManagementSystem.Logic\DeviceManagementSystem.Logic.csproj" />
-    <ProjectReference Include="..\..\scr\DeviceManagementSystem.Objects\DeviceManagementSystem.Objects.csproj" />
+    <ProjectReference Include="..\..\src\DeviceManagementSystem.Database\DeviceManagementSystem.Database.csproj" />
+    <ProjectReference Include="..\..\src\DeviceManagementSystem.Logic\DeviceManagementSystem.Logic.csproj" />
+    <ProjectReference Include="..\..\src\DeviceManagementSystem.Objects\DeviceManagementSystem.Objects.csproj" />
   </ItemGroup>
 
 </Project>
